add simple database

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon index.js"
   },
@@ -16,6 +17,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
+    "rxdb": "^15.22.0",
+    "rxjs": "^7.8.1",
     "ws": "^8.17.0"
   }
 }
