--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.10.0",
     "nodemon": "^3.1.0",
-    "rxdb": "^15.22.0",
-    "rxjs": "^7.8.1",
     "ws": "^8.17.0"
   }
 }
