--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
 PORT='5000'
+SECRET='secret123'
+MYSQL_HOST='127.0.0.1'
+MYSQL_USER='root'
+MYSQL_PASSWORD='7819345609'
+MYSQL_DATABASE='telegram_clone'
