--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,6 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
     "nodemon": "^3.1.0",
-    "ws": "^8.17.0"
+    "socket.io": "^4.7.5"
   }
 }
